--- a/classification/data_preperation.ipynb
+++ b/classification/data_preperation.ipynb
@@ -4,12 +4,14 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "## DATA PREPARATION"
+    "## DATA PREPARATION\n",
+    "\n",
+    "The file is intended to be run only once to generate cleaned_data.csv and subj_polarity_data.csv. These datasets are then used in other notebooks for further processing and training the models."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
