--- a/classification/data_preperation.ipynb
+++ b/classification/data_preperation.ipynb
@@ -11,7 +11,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": null,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -20,7 +20,7 @@
     "from textblob import TextBlob\n",
     "import nltk\n",
     "from nltk.corpus import stopwords\n",
-    "from nltk.tokenize import word_tokenize\n"
+    "from nltk.tokenize import word_tokenize"
    ]
   },
   {
@@ -80,7 +80,7 @@
     "nltk.download('stopwords')\n",
     "\n",
     "# Load your dataset\n",
-    "df = pd.read_csv(r'C:\\Users\\Neel\\OneDrive\\Desktop\\University\\Y4S2\\IR\\Information-Retrieval\\data\\data.csv')\n",
+    "df = pd.read_csv('../data/data.csv')\n",
     "\n",
     "# Drop rows where 'body' is NaN\n",
     "df = df.dropna(subset=['body'])\n",
@@ -123,7 +123,7 @@
    ],
    "source": [
     "# Save the DataFrame to a new CSV file\n",
-    "df.to_csv(r'C:\\Users\\Neel\\OneDrive\\Desktop\\University\\Y4S2\\IR\\Information-Retrieval\\data\\cleaned_data.csv', index=False)  # Set index=False to avoid saving the DataFrame index as a separate column\n",
+    "df.to_csv('../data/cleaned_data.csv', index=False)  # Set index=False to avoid saving the DataFrame index as a separate column\n",
     "\n",
     "print(\"Dataset saved\")"
    ]
@@ -210,7 +210,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
@@ -224,9 +224,9 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.10.5"
+   "version": "3.8.18"
   }
  },
  "nbformat": 4,
- "nbformat_minor": 2
+ "nbformat_minor": 4
 }
