--- a/classification/classification.ipynb
+++ b/classification/classification.ipynb
@@ -143,7 +143,9 @@
    "cell_type": "code",
    "execution_count": 29,
    "id": "da7329a3-95eb-4977-8054-e1ddd43c9144",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
@@ -17906,7 +17908,9 @@
    "cell_type": "code",
    "execution_count": 47,
    "id": "0a3cf9b5-5f5e-4dcd-a52d-068f6f89af07",
-   "metadata": {},
+   "metadata": {
+    "scrolled": true
+   },
    "outputs": [
     {
      "name": "stdout",
